# me433

./: README.md
hw10/Gerber/: PCB1.EXTREP  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GM  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.REP  PCB1.apr
hw12/: CMakeLists.txt  servo.c
hw13/: CMakeLists.txt  mouse.c  mpu6050.c  usb_descriptors.h
hw14/: dsp.py  python_csv.py
hw16/: CMakeLists.txt  motor.c
hw3/: CMakeLists.txt  adc.c
hw4/: CMakeLists.txt  dac.c
hw5/: CMakeLists.txt  more_io.c
hw6/: CMakeLists.txt  blink.c  i2c_screen.c
hw7/: CMakeLists.txt  uart.c
hw9/: CMakeLists.txt  pi_zero.py  uart_pi_zero.c
